--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,6 +19,7 @@
       "128": "icons/icon128.png"
     }
   },
+  "options_page": "settings.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -27,5 +28,10 @@
   ],
   "background": {
     "service_worker": "background.js"
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 } 
