--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ gunicorn>=21.2.0
 dj-database-url>=2.1.0
 whitenoise>=6.6.0
 django-sslserver>=0.22
+django-cors-headers>=4.3.1
+aiohttp>=3.9.5
+GitPython>=3.1.42
 
 # Web Scraping
 selenium==4.18.1
